# rba

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  do-release.pl
doc/targets/: acircles.eps  chessboard.eps
docker/ubuntu-22.04/: Dockerfile
mrba/: X2u.m  camcalib.m  elmark.m  list_images.m  mrba.m  plotframe.m  subfig.m
mrba/examples/: camcalib_exp1.m  camcalib_exp2.m  camcalib_exp3.m  heccalib_exp1.m  heccalib_exp2.m  heccalib_exp3.m  hecsynth.m
mrba/examples/data/RV6S/: RV6S.txt  exp1.mat  exp2.mat
mrba/examples/data/synth/: m1400_inoise.mat  m1400_irnoise.mat  m1400_nonoise_B.mat  m1400_nonoise_J.mat  m1400_rnoise.mat
src/: CMakeLists.txt  camera.cpp  camera.h  camera_basic.h  camera_opencv.h  cmodelfuncs.h  costfuncs.h  datastats.h  definitions.h  etransform.h  logging.h  main.cpp  options.h  ray.h  rba.h  rba_calib.cpp  rba_data.cpp  rba_report.cpp  rdesc.h  rdesc_mdh.cpp  rdesc_mdh.h  robot.cpp  robot.h  rpose.h  rpose_mdh.h  rpose_nonpar.h  scene.h  scene_calib.cpp  scene_load.cpp  scene_save.cpp  tdetector.h  tdetector_acircles.h  tdetector_chboard.h  tdetector_circles.h  tdetector_opencv.cpp  tdetector_opencv.h  track.h  track_calibdev.h  ttransform.h
